style.css
html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-size: 16px;
  font-family: Arial, sans-serif;
  text-decoration: none;
  min-height: 100%;
  color: #ebebeb;
  background-color: #252525;
}

*, *:before, *:after {
-webkit-box-sizing: inherit;
        box-sizing: inherit;
}

html,
body {
  display: flex;
  position: relative;
  justify-content: center;
}

body {
  height: 100%;
}

.container {
  display: grid;
  margin: auto;
  padding: 0 2rem;
  height: 100%;
  grid-column-gap: 2rem;
  grid-row-gap: 3rem;
  grid-template-columns: auto repeat(6,1fr);
  grid-template-rows: 15vh auto auto auto 6vh;
  grid-template-areas:
    "header header header header header header header"
    " . . full-col-head full-screen1 full-screen1 . . "
    " . react-col-head react-screen1 react-screen1 react-screen2 react-screen2 ."
    "site-col-head site-screen1 site-screen1 site-screen2 site-screen2 site-screen3 site-screen3"
    "footer footer footer footer footer footer footer";
  align-items: center;
}

.site.col-head,
.website-1,
.website-2,
.website-3 {
  align-self: flex-start;
}

.site.col-head {
  padding-top: 33%;
}


.page-title {
  font-size: 3rem;
  grid-area: header;
  margin: auto;
  padding-top: 1.5rem;
  text-align: center;
}

.full.medium,
.full.med-wide,
.page-title.medium,
.react.col-head.medium {
  display: none;
}

.page-title,
.col-head {
  font-family: 'Days One', sans-serif;
}

.col-head {
  font-size: 2rem;
  text-align: center;
}

.full.col-head {
  grid-area: full-col-head;
}

.react.col-head {
  grid-area: react-col-head;
}

.site.col-head {
  grid-area: site-col-head;
}

.screenshot {
  max-width: 100%;
  min-width: 0;
  height: stretch;
  }

.screenshot {
  position: relative;
}

img {
  width: 100%;
}

.screenshot .description {
  display: none;
}

.screenshot:hover .description{
  display: block;
  width: 18rem;
  background-color: #252525;
  position: absolute;
  left: 20%;
  top: 1rem;
  border: 2px solid #ebebeb;
  z-index: 2;
  padding: 0.5rem;
  line-height: 1.3;
}

.screenshot:hover .site.description {
  left: 3rem;
}

.description a {
  color: #e5c454;
  text-decoration: underline;
}
/*Full-stack projects*/

.full-1.screenshot {
  grid-area: full-screen1;
}
/*React projects*/

.react-1.screenshot {
  grid-area: react-screen1
}

.react-2.screenshot {
  grid-area: react-screen2
}

/*Websites*/

.website-1.screenshot {
  grid-area: site-screen1
}

.website-2.screenshot {
  grid-area: site-screen2
}

.website-3.screenshot {
  grid-area: site-screen3
}

footer {
  grid-area: footer;
  border-top: 1px solid white;
  padding-top: 0.5rem;
  display: flex;
  justify-content: space-between;
}

/*Media queries*/
/*iPad in landscape*/
@media only screen and (max-width: 1024px) {

  .full.widest {
    display: none;
  }

  .full.med-wide {
    display: block;
  }

  .screenshot:hover .description {
    width: 11rem;
    left: 0;
    top: 1.5rem;
  }

  .screenshot:hover .site.description {
    left: 0;
  }
}

/*Targets iPad Pro in portrait and screens up to 990px*/
@media only screen and (max-width: 1024px) and (orientation: portrait),
only screen and (max-width: 990px) {
  html,
  body,
  .container {
    min-height: 100%;
  }

  .container {
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-content: start;
    grid-template-rows: 20vh auto auto;
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas:
      "header header header header"
      ". full-col-head full-col-head ."
      ". full-screen1 full-screen1 ."
      ". react-col-head react-col-head ."
      "react-screen1 react-screen1 react-screen2 react-screen2"
      ". site-col-head site-col-head ."
      "site-screen1 site-screen1 site-screen2 site-screen2"
      ". site-screen3 site-screen3 ."
      "footer footer footer footer";
  }

  .widest,
  .full.med-wide {
    display: none;
  }

  .full.col-head.medium,
  .react.col-head.medium {
    display: block;
  }

  .page-title.medium {
    display: block;
    font-size: 2.5rem;
    text-align: center;
    line-height: 1.2;
  }

  .col-head {
    padding-top: 2rem;
  }

  .site.col-head,
  .website-1,
  .website-2,
  .website-3 {
    align-self: center;
  }

  .site.col-head {
    padding-top: 2rem;
  }

  .screenshot:hover .description {
    left: 1rem;
  }

  footer {
    margin-top: 0.5rem;
    padding: 0.5rem;
  }
}

@media only screen and (max-width:800px) {
  .container {
    max-width: 100%;
    grid-template-columns: 100%;
    grid-template-rows: minmax(auto, 20rem);
    grid-template-areas:
      "header"
      "full-col-head"
      "full-screen1"
      "react-col-head"
      "react-screen1"
      "react-screen2"
      "site-col-head"
      "site-screen1"
      "site-screen2"
      "site-screen3"
      "footer";
  }

  img {
    width: 100%;
    height: auto;
  }

  .screenshot:hover .description {
    width: 75%;
    left: 12.5%;
    top: 1.5rem;
    font-size: 1rem;
  }

  .screenshot:hover .site.description {
    left: 12.5%;
  }

  footer {
    padding-left: 0;
    padding-right: 0;
  }

  footer h3,
  footer h4 {
    width: 35%;
  }

  footer h4 {
    text-align: right;
  }

}

